--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,20 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "node-sass": "^4.13.0",
-    "nuka-carousel": "^4.4.7",
-    "prop-types": "^15.7.2",
-    "react": "16.7.0-alpha.0",
-    "react-dom": "16.7.0-alpha.0",
-    "react-scripts": "^2.1.8",
-    "react-spring": "^7.2.8",
-    "react-with-gesture": "^4.0.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.3",
     "@testing-library/user-event": "^7.1.2",
+    "node-sass": "^4.13.0",
+    "nuka-carousel": "^4.4.7",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-spring": "^7.2.11",
+    "react-with-gesture": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
